Readjusted circular image size to fix formatting issue on mobile landscape.

--- a/src/pages/HomepageHero.css
+++ b/src/pages/HomepageHero.css
@@ -139,7 +139,6 @@
 
     .picture-container {
         position: absolute;
-        width: 86px;
         bottom: 2%;
         animation: fadeIn .75s ease-in;
     }
